<resources>
    <string name="app_name">Greeshma_Prasad_Project2</string>
    <string name="enter_email">Please enter email</string>
    <string name="vegetable">Vegetables</string>
    <string name="farm_fresh_tomato_1kg">farm fresh tomato 1kg</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="address_label">Address Label</string>
    <string name="address_label_optional">Address Label(optional)</string>
    <string name="area">Area</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_building_name">Enter building name</string>
    <string name="building_name">Building Name</string>
    <string name="card_number">Card Number</string>
    <string name="xxxx_xxxx_xxxx_xxxx">xxxx xxxx xxxx xxxx</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="country">Country</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="order_places_successfully">Order Places Successfully</string>
    <string name="thank_you_for_yoour_order_we_will_devliver_your_order_shortley">Thank you for yoour order! We will devliver your order shortley</string>
    <string name="back_to_home">Back To Home</string>
    <string name="grocery_plus">Grocery Plus</string>
    <string name="signup">Signup</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_email_">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="_0">0</string>
    <string name="categories">Categories</string>
    <string name="send_receipt">Share Receipt</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="thank_you_for_yoour_order_we_will_devliver_your_order_shortley_">Thank you for yoour order! We will devliver your order shortley.</string>
    <string name="total_10_00">Total: $10.00</string>
    <string name="_10_00">$10.00</string>
    <string name="qty_1">Qty: 1</string>
    <string name="product_name">Product Name</string>
    <string name="payment">Payment</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First name</string>
    <string name="checkout_screen">Checkout Screen</string>
    <string name="enter_first_name">Enter first Name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="zip_code">Zip Code</string>
    <string name="enter_zip_code">Enter zip code</string>
    <string name="enter_country">Enter country</string>
    <string name="billing_address">Billing Address</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter last Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="enter_city">Enter city</string>
</resources>