<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textview_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textview_quantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/textview_product_name"
        app:layout_constraintEnd_toStartOf="@id/textview_price"
        app:layout_constraintTop_toTopOf="@id/textview_product_name" />

    <TextView
        android:id="@+id/textview_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/textview_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_quantity" />

    <TextView
        android:id="@+id/textview_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_10_00"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/textview_product_name"
        app:layout_constraintTop_toBottomOf="@id/textview_product_name" />

</androidx.constraintlayout.widget.ConstraintLayout>